<?xml version="1.0"?>
<package format="2">
  <name>orbit</name>
  <version>0.0.0</version>
  <description>The orbit project11 navigation plugin</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>project11</depend>
  <depend>project11_navigation</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pluginlib</depend>

  <export>
    <project11_navigation plugin="${prefix}/project11_navigation_plugin.xml" />
  </export>
</package>
